--- a/bonuspoint-config-repo/bp-application-test.yml
+++ b/bonuspoint-config-repo/bp-application-test.yml
@@ -2,9 +2,9 @@
 # 数据库配置
 spring:
   datasource:
-    url: jdbc:mysql://172.16.100.65:3306/bonuspoint?useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://localhost:3306/bonuspoint?useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
-    password: 123456
+    password: root
     hikari:
       # 连接只读数据库时配置为true， 保证安全
       read-only: false
