--- a/bonuspoint-config-repo/bp-application-test.yml
+++ b/bonuspoint-config-repo/bp-application-test.yml
@@ -22,7 +22,7 @@ spring:
     host: 192.168.242.128
     database: 0
     port: 6379
-    password: 123456
+    #password: 123456
     lettuce:
         pool:
           #最大连接数
