--- a/bonuspoint-config-repo/bp-application-test.yml
+++ b/bonuspoint-config-repo/bp-application-test.yml
@@ -2,7 +2,7 @@
 # 数据库配置
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/bonuspoint?useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://192.168.242.128:3306/bonuspoint?useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: root
     hikari:
