--- a/bonuspoint-config-repo/bp-application-test.yml
+++ b/bonuspoint-config-repo/bp-application-test.yml
@@ -19,7 +19,7 @@ spring:
 
   #redis
   redis:
-    host: 192.168.242.128
+    host: localhost
     database: 0
     port: 6379
     password: 123456
