--- a/bonuspoint-config-repo/bp-application-auth.yml
+++ b/bonuspoint-config-repo/bp-application-auth.yml
@@ -40,7 +40,7 @@ pagehelper:
 
 eureka:
   instance:
-    instance-id: ${spring.cloud.client.ip-address}:${server.port}
+    instance-id: ${spring.cloud.client.ipAddress}:${server.port}
     # 是否优先使用IP地址作为主机名的标识，默认为false
     prefer-ip-address: true
     # 客户端向服务端发送心跳（服务续约任务）的调用时间间隔，默认为30秒
