--- a/bonuspoint-config-repo/bp-application-test.yml
+++ b/bonuspoint-config-repo/bp-application-test.yml
@@ -81,7 +81,7 @@ method:
 
 zuul:
   routes:
-    service‐a.path: service‐a/**
+    service‐a.path: /service‐a/**
     service‐a.serviceId : hello‐service1
 
 #/service‐a/**
