--- a/bonuspoint-config-repo/bp-application-test.yml
+++ b/bonuspoint-config-repo/bp-application-test.yml
@@ -81,8 +81,11 @@ method:
 
 zuul:
   routes:
-    service‐a.path: /service‐a/**
-    service‐a.serviceId : hello‐service1
+    HELLO-SERVICE1: /hello/**
+
+
+    #service‐a.path: /service‐a/**
+    #service‐a.serviceId : hello‐service1
 
 #/service‐a/**
 # /aaa/*
